--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-primary bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand active info btn-outline-info" href="#">LEARN-CODDING</a>
+            <a class="navbar-brand active info btn-outline-info" href="/Bootstrap-learn-by-anuj/">LEARN-CODDING</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item ">
-                        <a class="nav-link active btn-outline-danger " aria-current="page" href="#">Home</a>
+                        <a class="nav-link active btn-outline-danger " aria-current="page" href="/Bootstrap-learn-by-anuj/">Home</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active btn-outline-success" href="/about.html">About</a>
+                        <a class="nav-link active btn-outline-success" href="/Bootstrap-learn-by-anuj/about.html">About</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link active warning btn-outline-warning" href="/contact us.html">Contact Us</a>
+                        <a class="nav-link active warning btn-outline-warning" href="/Bootstrap-learn-by-anuj/contact.html">Contact Us</a>
                     </li>
 
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
