--- a/about.html
+++ b/about.html
@@ -24,15 +24,15 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item ">
-                        <a class="nav-link active btn-outline-info" href="/index.html">Home</a>
+                        <a class="nav-link active btn-outline-danger " aria-current="page" href="/Bootstrap-learn-by-anuj/">Home</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active btn-outline-success" href="/about.html">About</a>
+                        <a class="nav-link active btn-outline-success" href="/Bootstrap-learn-by-anuj/about.html">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active warning btn-outline-warning" href="/contact.html">Contact Us</a>
+                    <li class="nav-item active">
+                        <a class="nav-link active warning btn-outline-warning" href="/Bootstrap-learn-by-anuj/contact.html">Contact Us</a>
                     </li>
 
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
