--- a/index.html
+++ b/index.html
@@ -19,23 +19,25 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item ">
-                <a class="nav-link active btn-outline-success" href="/index.html">Home</a>
-              </li>
-              <li class="nav-item ">
-                <a class="nav-link active btn-outline-success" href="/about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active warning btn-outline-warning" href="/contact.html">Contact Us</a>
-              </li>
-             
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
+             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item ">
+                        <a class="nav-link active btn-outline-danger " aria-current="page" href="/Bootstrap-learn-by-anuj/">Home</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link active btn-outline-success" href="/Bootstrap-learn-by-anuj/about.html">About</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link active warning btn-outline-warning" href="/Bootstrap-learn-by-anuj/contact.html">Contact Us</a>
+                    </li>
+
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
               </li>
 
             </ul>
